--- a/ecom/templates/admin/adminbase.html
+++ b/ecom/templates/admin/adminbase.html
@@ -58,7 +58,7 @@
       
       #page-content-wrapper {
         width: 100%;
-        padding-top: 70px;
+        padding-top: 30px;
       }
       
       #wrapper.toggled #page-content-wrapper {
@@ -153,6 +153,8 @@
         height: 65px;
         position: relative;
         background: #212531;
+        text-align: center;
+        padding-left: 10px;
         background: linear-gradient(to right bottom, #2f3441 50%, #212531 50%);
         padding-top: 1em;
       }
@@ -378,7 +380,7 @@
             <a href="/view_products/" class="pro">Products</a>
           </li>
           <li>
-            <a href="/viewbrand/" class="cat">Categories</a>
+            <a href="/viewbrand/" class="cat">Brands</a>
           </li>
           <li>
             <a href="/admorders/" class="ord">Orders</a>
