--- a/ecom/templates/admin/admcategory.html
+++ b/ecom/templates/admin/admcategory.html
@@ -1,187 +1,186 @@
-{% include "admin/adminbase.html" %}
+{% include 'admin/adminbase.html' %}
 {% load static %}
 <head>
-    <link rel="stylesheet" href="{% static 'css/styletable.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
+  <link rel="stylesheet" href="{% static 'css/styletable.css' %}" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 {% block content1 %}
-<div class="container tbd1" style="width: 60%;">
+  <div class="container tbd1" style="width: 60%;">
     <div class="table-wrapper">
-        <div class="table-title">
-            <div class="row">
-                <div class="col-sm-6">
-                    <b><h2>Brand details</b></h2>
-                </div>
-                <div class="col-sm-6">
-                    <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New brand</span></a>
-                    <!-- <a href="#deleteEmployeeModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						 -->
-                </div>
-            </div>
+      <div class="table-title">
+        <div class="row">
+          <div class="col-sm-6">
+            <h2><b>Brand details</b></h2>
+          </div>
+          <div class="col-sm-6">
+            <a href="#addCategoryModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New brand</span></a>
+          </div>
         </div>
-        <form action="/viewbrand/">
-        <div class="row input-group ">
-            <input type="search" name="name" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
+      </div>
+      <!-- Search -->
+      <form action="/viewbrand/">
+        <div class="row input-group">
+          <input type="search" name="name" class="form-control rounded offset-1 col-lg-8 col-sm-4" placeholder="Brand name" aria-label="Search" aria-describedby="search-addon" />
+          <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3">search</button>
+        </div>
+      </form>
+      <!-- Search End -->
+      <table class="table table-striped table-hover ms-3">
+        <thead>
+          <tr>
+            <th>Brand Name</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for br in brand %}
+            <tr>
+              <td>{{ br.brand_name }}</td>
+              <td>
+                <a href="#editCategoryModal-{{ forloop.counter }}" class="edit" data-toggle="modal" title="edit brand"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                {% if not br.is_listed %}
+                  <a href="#listCategory-{{ forloop.counter }}" class="delete" data-toggle="modal" title="list brand"><i class="fa-solid fa-eye fa-lg" style="color: #35ef61;"></i></a>
+                {% else %}
+                  <a href="#listCategory-{{ forloop.counter }}" class="delete" data-toggle="modal" title="unlist brand"><i class="fa-solid fa-eye-slash fa-sm" style="color: #ff8c08;"></i></a>
+                {% endif %}
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      <!-- Pagination Start -->
+      <div class="clearfix">
+        <div class="hint-text">
+          <b>{{ brand }}</b>
+        </div>
+        {% if brand.has_other_pages %}
+          <ul class="pagination">
+            {% if brand.has_previous %}
+              <li class="page-item">
+                <a href="?page={{ brand.previous_page_number }} " class="page-link">&lt;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a href="#">&lt;</a>
+              </li>
+            {% endif %}
+            {% for i in brand.paginator.page_range %}
+              {% if brand.number == i %}
+                <li class="active">
+                  <span>{{ i }} <span class="sr-only">(current)</span></span>
+                </li>
+              {% else %}
+                <li class="page-item">
+                  <a href="?page={{ i }}" class="page-link">{{ i }}</a>
+                </li>
+              {% endif %}
+            {% endfor %}
+            {% if brand.has_next %}
+              <li class="page-item">
+                <a href="?page={{ brand.next_page_number }}" class="page-link">&gt;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a href="#" class="page-link">&gt;</a>
+              </li>
+            {% endif %}
+          </ul>
+        {% endif %}
+      </div>
+    </div>
+    <!-- Pagination End -->
+  </div>
+
+  <!-- Category ADD Modal HTML -->
+  <div id="addCategoryModal" class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form method="post" action="/add_brand/">
+          {% csrf_token %}
+          <div class="modal-header">
+            <h4 class="modal-title">Add Brand</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label>Brand Name</label>
+              <input type="text" name="name" class="form-control" required />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+            <input type="submit" class="btn btn-success" value="Add" />
           </div>
         </form>
-        <table class="table table-striped table-hover ms-3 ">
-            <thead>
-                <tr>
-                   
-                    <th>Brand Name</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody >
-            {% for br in brand %}
-                <tr>
-                    <td>{{br.brand_name}} </td>
+      </div>
+    </div>
+  </div>
 
-                    <td >
-                        <a href="#editEmployeeModal-{{forloop.counter}}" class="edit" data-toggle="modal" title="edit brand"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        {% if not br.is_listed  %}
-                        <a href="#listEmployeeModal-{{forloop.counter}}" class="delete" data-toggle="modal" title="list brand"><i class="fa-solid fa-eye  fa-lg" style="color: #35ef61;"></i></a>
-                        {% else %}
-                        <a href="#listEmployeeModal-{{forloop.counter}}" class="delete" data-toggle="modal" title="unlist brand"><i class="fa-solid fa-eye-slash fa-sm" style="color: #ff8c08;"></i></a>
-                        {% endif %}
-                        {% comment %} <a href="#deleteEmployeeModal-{{forloop.counter}}" class="delete" data-toggle="modal" title="delete brand"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> {% endcomment %}
-                    </td>
-                </tr>
-            {% endfor %}
-                
-            </tbody>
-        </table>
-       <div class="clearfix">
-            <div class="hint-text"> <b>{{brand}} </b>  </div>
-            {% if brand.has_other_pages %}
-            <ul class="pagination">
-                {% if brand.has_previous %}
-                    <li class="page-item"><a href="?page={{brand.previous_page_number}} " class="page-link">&lt; </a></li>
-                {% else %}
-                    <li class="page-item disabled"><a href="#">&lt;</a></li>
-                {% endif %}
-                {% for i in brand.paginator.page_range  %}
-                    {% if brand.number == i %}
-                    <li class="active"><span>{{ i }} <span class="sr-only"> (current) </span></span></li>
-                    {% else %}
-                        <li class="page-item"><a href="?page={{ i }}" class="page-link">{{ i }} </a></li>
-                    {% endif %}
-                {% endfor %}
-                {% if brand.has_next %}
-                    <li class="page-item"><a href="?page={{brand.next_page_number}}" class="page-link">&gt;</a></li>
-                {% else %}
-                    <li class="page-item disabled"><a href="#" class="page-link">&gt;</a></li>
-                {% endif %}
-            </ul>
-            {% endif %}
-        </div> 
-    </div>
-</div>
-<!-- ADD Modal HTML -->
-<div id="addEmployeeModal" class="modal fade">
-    <div class="modal-dialog">
+  <!-- Edit Category Modal HTML -->
+  {% for i in brand %}
+    <div id="editCategoryModal-{{ forloop.counter }}" class="modal fade">
+      <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post" action="/add_brand/">
+          <form method="POST" action="/edit_brand/{{ i.id }}">
             {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Add Brand</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <div class="form-group">
-                        <label>Brand Name</label>
-                        <input type="text"  name="name" class="form-control" required>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-success" value="Add">
-                </div>
-            </form>
+            <div class="modal-header">
+              <h4 class="modal-title">Edit Brand</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <label>Brand Name</label>
+                <input type="text" name="name" value="{{ i.brand_name }}" class="form-control" required />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+              <input type="submit" class="btn btn-info" value="Save" />
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-</div>
-<!-- Edit Modal HTML -->
-{% for i in brand %}
-<div id="editEmployeeModal-{{forloop.counter}}" class="modal fade">
-    <div class="modal-dialog">
+  {% endfor %}
+  <!-- list brand -->
+  {% for i in brand %}
+    <div id="listCategory-{{ forloop.counter }}" class="modal fade">
+      <div class="modal-dialog">
         <div class="modal-content">
-            <form method="POST" action="/edit_brand/{{i.id}}">
+          <form method="POST" action="/list_brand/{{ i.id }}">
             {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Edit Brand</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <div class="form-group">
-                        <label>Brand Name</label>
-                        <input type="text" name="name" value="{{i.brand_name}}" class="form-control" required>
-                    </div>
-                    			
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-info" value="Save">
-                </div>
-            </form>
+            <div class="modal-header">
+              <h4 class="modal-title">list Brand</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+              <p>
+                Are you sure you want to{% if i.is_listed %}
+                   unlist
+                {% else %}
+                  list
+                {% endif %} <b>{{ i.brand_name }}</b>?
+              </p>
+              <!-- <p class="text-warning"><small>This action can be reversed.</small></p> -->
+            </div>
+            <div class="modal-footer">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+              <input type="submit"
+                class="btn btn-warning"
+                value="{% if i.is_listed %}
+                    unlist {% else %} list 
+                {% endif %}" />
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-</div>
-{% endfor %}
-<!-- list brand -->
-{% for i in brand %}
-<div id="listEmployeeModal-{{forloop.counter}}" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form method="POST" action="/list_brand/{{i.id}}">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">list Brand</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <p>Are you sure you want to {% if i.is_listed %} unlist {% else %} list {% endif %} <b>{{i.brand_name}}</b>?</p>
-                    <!-- <p class="text-warning"><small>This action can be reversed.</small></p> -->
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-warning" value="{% if i.is_listed %} unlist {% else %} list {% endif %}">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-{% endfor %}
-<!-- Delete Modal HTML -->
-{% for i in brand %}
-<div id="deleteEmployeeModal-{{forloop.counter}}" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form method="POST" action="/delete_brand/{{i.id}}">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Delete Brand</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <p>Are you sure you want to delete this Brand?</p>
-                    <p class="text-warning"><small>This action cannot be undone.</small></p>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-danger" value="Delete">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-{% endfor %}
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
+  {% endfor %}
+
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
 {% endblock content1 %}
