--- a/ecom/templates/admin/admcoupons.html
+++ b/ecom/templates/admin/admcoupons.html
@@ -1,190 +1,236 @@
-{% include "admin/adminbase.html" %}
+{% include 'admin/adminbase.html' %}
 {% load static %}
 <head>
-    <link rel="stylesheet" href="{% static 'css/styletable.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
+  <link rel="stylesheet" href="{% static 'css/styletable.css' %}" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 {% block content1 %}
-<div class="container tbd1">
+  <div class="container tbd1">
     <div class="table-wrapper">
-        <div class="table-title">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h2>Coupon <b>Management</b></h2>
-                </div>
-                <div class="col-sm-6">
-                    <a href="#addCouponModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Coupon</span></a>                </div>
-            </div>
-        </div>
-        <div class="row input-group ">
-            <form action="/view_coupon/">
-                <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-                <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " >search</button>
-            </form>
+      <div class="table-title">
+        <div class="row">
+          <div class="col-sm-6">
+            <h2>Coupon <b>Management</b></h2>
           </div>
-        <table class="table table-striped table-hover ms-3">
-            <thead>
-                <tr>
-                    <th>Title</th>
-                    <th>Code</th>
-                    <th>Discount Amount</th>
-                    <th>Start Date</th>
-                    <th>Expiry Date</th>
-                    <th>active/<br>deactive</th>
-                    <th>Update</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for coupon in coupons  %}
-                <tr>
-                    <td>{{coupon.title}}</td>
-                    <td>{{coupon.code}}</td>
-                    <td>{{coupon.discount_amount}}</td>
-                    <td>{{ coupon.valid_from }}</td>
-                    <td>{{coupon.valid_to}}</td>
-                    <td>
-                        {% if coupon.is_active %}
-                        <a href="#listCoupon{{coupon.id}}" class="blue " data-toggle="modal" title="unlist product"> <i class="fa-solid fa-eye-slash fa-sm pt-4" style="color: red;"></i></a>
-                        {% else %}
-                        <a href="#listCoupon{{coupon.id}}" class="delete " data-toggle="modal"><i class="fa-solid fa-eye  fa-lg pt-4" style="color: #ffd500;"></i></a>
-                        {% endif %}
-                    </td>
-                    <td>
-                        <a href="#editCoupon{{coupon.id}}" class="edit" data-toggle="modal"><i class="material-icons pt2" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="clearfix">
-            <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
-            <ul class="pagination">
-                <li class="page-item disabled"><a href="#">Previous</a></li>
-                <li class="page-item"><a href="#" class="page-link">1</a></li>
-                <li class="page-item"><a href="#" class="page-link">2</a></li>
-                <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                <li class="page-item"><a href="#" class="page-link">4</a></li>
-                <li class="page-item"><a href="#" class="page-link">5</a></li>
-                <li class="page-item"><a href="#" class="page-link">Next</a></li>
-            </ul>
+          <div class="col-sm-6">
+            <a href="#addCouponModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Coupon</span></a>
+          </div>
         </div>
+      </div>
+      <div class="row input-group">
+        <!-- Search Start -->
+        <form action="/view_coupon/">
+          <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4" placeholder="Coupon code or title" aria-label="Search" aria-describedby="search-addon" />
+          <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3">search</button>
+        </form>
+        <!-- Search End -->
+      </div>
+      {% if messages %}
+        {% for message in messages %}
+          <div class="text-center">
+            <h4 class="{% if message.tags == 'success' %} 
+                    text-success {% else %} 
+                    text-danger {% endif %}">
+                    {{ message }} 
+            </h4>
+          </div>
+        {% endfor %}
+      {% endif %}
+      <table class="table table-striped table-hover ms-3">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Code</th>
+            <th>Discount Amount</th>
+            <th>Start Date</th>
+            <th>Expiry Date</th>
+            <th>
+              active/<br />deactive
+            </th>
+            <th>Update</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for coupon in coupons %}
+            <tr>
+              <td>{{ coupon.title }}</td>
+              <td>{{ coupon.code }}</td>
+              <td>{{ coupon.discount_amount }}</td>
+              <td>{{ coupon.valid_from }}</td>
+              <td>{{ coupon.valid_to }}</td>
+              <td>
+                {% if coupon.is_active %}
+                  <a href="#listCoupon{{ coupon.id }}" class="blue" data-toggle="modal" title="Deactive Coupon"><i class="fa-solid fa-eye-slash fa-sm pt-4" style="color: red;"></i></a>
+                {% else %}
+                  <a href="#listCoupon{{ coupon.id }}" class="delete" data-toggle="modal" title="Activate Coupon "><i class="fa-solid fa-eye fa-lg pt-4" style="color: green;"></i></a>
+                {% endif %}
+              </td>
+              <td>
+                <a href="#editCoupon{{ coupon.id }}" class="edit" data-toggle="modal"><i class="material-icons pt2" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+      <div class="clearfix">
+        {% if coupons.has_other_pages %}
+          <div class="hint-text">
+            <b>{{ coupons }}</b>
+          </div>
+          <ul class="pagination">
+            {% if coupons.has_previous %}
+              <li class="page-item">
+                <a href="?page={{ coupons.previous_page_number }}{% if search %}{{ search }}{% endif %}" class="page-link">&lt;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a href="#">&lt;</a>
+              </li>
+            {% endif %}
+            {% for i in coupons.paginator.page_range %}
+              {% if coupons.number == i %}
+                <li class="active">
+                  <span>{{ i }} <span class="sr-only">(current)</span></span>
+                </li>
+              {% else %}
+                <li class="page-item">
+                  <a href="?page={{ i }}{% if search %}{{ search }}{% endif %}" class="page-link">{{ i }}</a>
+                </li>
+              {% endif %}
+            {% endfor %}
+            {% if coupons.has_next %}
+              <li class="page-item">
+                <a href="?page={{ coupons.next_page_number }}{% if search %}{{ search }}{% endif %}" class="page-link">&gt;</a>
+              </li>
+            {% else %}
+              <li class="page-item disabled">
+                <a href="#" class="page-link">&gt;</a>
+              </li>
+            {% endif %}
+          </ul>
+        {% endif %}
+      </div>
     </div>
-</div>
-<!-- ADD Modal HTML -->
-<div id="addCouponModal" class="modal fade">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form method="post" action="/add_coupon/">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Add Coupon</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <div class="form-group">
-                        <label>Title</label>
-                        <input type="text" name="title"  class="form-control" autofocus  required>
-                    </div>
-                    <div class="form-group">
-                        <label>Code</label>
-                        <input type="text" name="code" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Discount Amount</label>
-                        <input type="text" name="disamount" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Start Date</label>
-                        <input type="date" name="sdate" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Expiry Date</label>
-                        <input type="date" name="edate" class="form-control" required>
-                    </div>
-                  		
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-success" value="Add">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+  </div>
 
-<!-- Edit Modal HTML -->
-{% for coupon in coupons %}
-<div id="editCoupon{{coupon.id}}" class="modal fade">
+  <!-- ADD Coupon Modal HTML -->
+  <div id="addCouponModal" class="modal fade">
     <div class="modal-dialog">
-        <div class="modal-content">
-            <form method="post" action="/update_coupon/{{coupon.id}}">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">Update Coupon</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <div class="form-group">
-                        <label>Title</label>
-                        <input type="text" name="title" value="{{coupon.title}}"  class="form-control" autofocus  required>
-                    </div>
-                    <div class="form-group">
-                        <label>Code</label>
-                        <input type="text" name="code" value="{{coupon.code}}" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Discount Amount</label>
-                        <input type="text" name="disamount" value="{{coupon.discount_amount}}" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Start Date</label>
-                        <input type="date" name="sdate" value="{{coupon.valid_from|date:'Y-m-d' }}" class="form-control" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Expiry Date</label>
-                        <input type="date" name="edate" value="{{coupon.valid_to|date:'Y-m-d' }}" class="form-control" required>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-info" value="Update">
-                </div>
-            </form>
-        </div>
+      <div class="modal-content">
+        <form method="post" action="/add_coupon/">
+          {% csrf_token %}
+          <div class="modal-header">
+            <h4 class="modal-title">Add Coupon</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label>Title</label>
+              <input type="text" name="title" class="form-control" autofocus required />
+            </div>
+            <div class="form-group">
+              <label>Code</label>
+              <input type="text" name="code" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label>Discount Amount</label>
+              <input type="number" name="disamount" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label>Start Date</label>
+              <input type="date" name="sdate" class="form-control" required />
+            </div>
+            <div class="form-group">
+              <label>Expiry Date</label>
+              <input type="date" name="edate" class="form-control" required />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+            <input type="submit" class="btn btn-success" value="Add" />
+          </div>
+        </form>
+      </div>
     </div>
-</div>
-{% endfor %}
+  </div>
 
-<!-- list product -->
-{% for coupon in coupons %}
-<div id="listCoupon{{coupon.id}}" class="modal fade">
-    <div class="modal-dialog">
+  <!-- Edit Coupon Modal HTML -->
+  {% for coupon in coupons %}
+    <div id="editCoupon{{ coupon.id }}" class="modal fade">
+      <div class="modal-dialog">
         <div class="modal-content">
-            <form method="post" action="/activation/{{coupon.id}}">
-                {% csrf_token %}
-                <div class="modal-header">						
-                    <h4 class="modal-title">list Coupon</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">					
-                    <p>Are you sure you want to active/deactive {{coupon.title}}?</p>
-                    <p class="text-warning"><small>This action can be reversed.</small></p>
-                </div>
-                <div class="modal-footer">
-                    <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-danger" value="{% if coupon.is_active %} Deactive {% else %} Active {% endif %}">
-                </div>
-            </form>
+          <form method="post" action="/update_coupon/{{ coupon.id }}">
+            {% csrf_token %}
+            <div class="modal-header">
+              <h4 class="modal-title">Update Coupon</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="form-group">
+                <label>Title</label>
+                <input type="text" name="title" value="{{ coupon.title }}" class="form-control" autofocus required />
+              </div>
+              <div class="form-group">
+                <label>Code</label>
+                <input type="text" name="code" value="{{ coupon.code }}" class="form-control" required />
+              </div>
+              <div class="form-group">
+                <label>Discount Amount</label>
+                <input type="number" name="disamount" value="{{ coupon.discount_amount }}" class="form-control" required />
+              </div>
+              <div class="form-group">
+                <label>Start Date</label>
+                <input type="date" name="sdate" value="{{ coupon.valid_from|date:'Y-m-d' }}" class="form-control" required />
+              </div>
+              <div class="form-group">
+                <label>Expiry Date</label>
+                <input type="date" name="edate" value="{{ coupon.valid_to|date:'Y-m-d' }}" class="form-control" required />
+              </div>
+            </div>
+            <div class="modal-footer">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+              <input type="submit" class="btn btn-info" value="Update" />
+            </div>
+          </form>
         </div>
+      </div>
     </div>
-</div>
-{% endfor %}
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
-{% endblock content1 %}
+  {% endfor %}
+
+  <!-- Activate or Deacticate Coupon Modal -->
+  {% for coupon in coupons %}
+    <div id="listCoupon{{ coupon.id }}" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <form method="post" action="/activation/{{ coupon.id }}">
+            {% csrf_token %}
+            <div class="modal-header">
+              <h4 class="modal-title">list Coupon</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+              <p>Are you sure you want to active/deactive {{ coupon.title }}?</p>
+              <p class="text-warning">
+                <small>This action can be reversed.</small>
+              </p>
+            </div>
+            <div class="modal-footer">
+              <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel" />
+              <input type="submit"
+                class="btn btn-danger"
+                value="{% if coupon.is_active %}
+                    Deactive {% else %} Active
+                {% endif %}" />
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="https://kit.fontawesome.com/412a20d28b.js" crossorigin="anonymous"></script>
+{% endblock %}
