--- a/ecom/templates/admin/admorderitems.html
+++ b/ecom/templates/admin/admorderitems.html
@@ -4,11 +4,9 @@
     <link rel="stylesheet" href="{% static 'css/styletable.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    
 </head>
 {% block content1 %}
 <div class="container tbd1">
@@ -21,17 +19,47 @@
             </div>
         </div>
         <div class="row input-group mb-4 mt-4">
-            <form action="/admorders/">
-            <input type="search" name="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 " data-mdb-ripple-init>search</button>
-            </form>
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row p-1 ">
+                            <div class="col-md-4 ">
+                                <p class="card-text pb-3">Username: {{ orders.user}}</p>
+                            </div>
+                            <div class="col-md-4">
+                                <p class="card-text">Payment Mode: {{ orders.payment_mode }}</p>
+                            </div>
+                            <div class="col-md-4">
+                                <p class="card-text"> <b>  Ordered Date: {{  orders.order_date }} </b></p>
+                            </div>
+                            <div class="col-md-4">
+                                <p class="card-text">Coupon Amount: {% if orders.coupon_applied %} ₹{{ orders.coupon_id.discount_amount }} {% else %} 0 {% endif %}  </p>
+                            </div>
+                            <div class="col-md-4">
+                                <p class="card-text"> {% if orders.coupon_applied %}Coupon Code: {{ orders.coupon_id.code }} {% else %} No coupon {% endif %} </p>
+                            </div>
+                            <div class="col-md-4">
+                                <p class="card-text">Total Order Price: <b> ₹{{ orders.total }} </b>  </p>
+                            </div>
+                            <div class="col-md-8 pt-4  ">
+                                <p class="card-text"><b> Address :</b> House - {{ orders.address.house }} , {{ orders.address.town }} , PIN: {{ orders.address.pincode }} , {{ orders.address.district }} , {{ orders.address.state }} , {{ orders.address.country }}   </p>
+                            </div>
+                            <div class="col-md-4 pt-4">
+                                <p class="card-text">Number : {{ orders.address.number }}   </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
           </div>
                 {% if messages %}
                     {% for message in messages %}
                         <div class="text-center">
-                            <h3 class=" text-danger"> {{ message }} </h3>
+                            <h3 class="{% if message.tags == 'success' %} 
+                                text-success {% else %} text-danger
+                                {% endif %}"> {{ message }}
+                            </h3>
                         </div>
-                        
                     {% endfor %}
                 {% endif %}
         <table class="table table-striped table-hover ms-3">
@@ -40,8 +68,6 @@
                     <th>id</th>
                     <th>Product Name</th>
                     <th>Image</th>
-                    <th>User</th>
-                    <th>Address</th>
                     <th>Price x Quantity</th>
                     <th>Size</th>
                     <th>Ordered date</th>
@@ -55,21 +81,13 @@
                     <td> {{item.id}} </td>
                     <td style=" word-wrap: break-word; max-width:100px"> {{item.product.product_id.brand}} <br> {{item.product.product_id.name}} </td>
                     <td><img src=" {{ item.product.product_id.image1.url }} " alt="nike" style="width: 70px; height: 80px; "></td>
-                    <td> {{item.user1}} </td>
-                    <td style=" word-wrap: break-word; max-width:139px"> {{item.address1.state}},{{item.address1.district}} <br>
-                        {{item.address1.house}},{{item.address1.town}},<br> Pin {{item.address1.pincode}} <br> {{item.address1.number}}
-                    </td>
                     <td> {{item.amount}} x {{item.quantity}}  </td>
                     <td> {{item.size}}  </td>
-                    
-                    <td >
-                            {{item.order_id.order_date}} 
-                        <!-- <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                        <a href="#listEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-eye  fa-lg" style="color: #ffd500;"></i></a>
-                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
+                    <td>
+                        {{item.order_id.order_date}} 
                     </td>
                     <td> {{item.delivery_date}} {% if item.status == 'ordered' or item.status == 'shipped' or item.status == 'out for delivery' %}
-                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#editdate{{item.id}}" class="edit " data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#editdate{{item.id}}" class="edit " data-toggle="modal"><i class="material-icons " data-toggle="tooltip" title="Edit" style="color: darkorange ;">&#xE254;</i></a>
                         {% endif %}    
                     </td>
                     </td>
@@ -80,36 +98,12 @@
                          {% endif %}
                     </td>
                 </tr>
-                {% endfor %}
-                
+                {% endfor %}    
             </tbody>
         </table>
-       <div class="clearfix">
-            {% comment %} <div class="hint-text"><b>{{order_items}} </b> </div> {% endcomment %}
-            {% if order_items.has_other_pages %}
-            <ul class="pagination">
-                {% if order_items.has_previous %}
-                    <li class="page-item"><a href="?page={{order_items.previous_page_number}}{% if search %}&search={{search}}{% endif %}" class="page-link">&lt;</a></li>
-                {% else %}
-                    <li class="page-item disabled"><a href="#">&lt;</a></li>
-                {% endif %}
-                {% for i in order_items.paginator.page_range %}
-                    {% if order_items.number == i %}
-                        <li class="active"><span>{{ i }} <span class="sr-only"> (current) </span></span></li>
-                    {% else %}
-                        <li class="page-item"><a href="?page={{ i }}{% if search %}&search={{search}}{% endif %}" class="page-link">{{ i }} </a></li>
-                    {% endif %}
-                {% endfor %}
-                {% if order_items.has_next %}
-                    <li class="page-item"><a href="?page={{order_items.next_page_number}}{% if search %}&search={{search}}{% endif %}" class="page-link">&gt;</a></li>
-                {% else %}
-                    <li class="page-item disabled"><a href="#" class="page-link">&gt;</a></li>
-                {% endif %}
-            </ul>
-            {% endif %}
-        </div> 
     </div>
 </div>
+
 <!-- edit status Modal HTML -->
 {% for item in order_items %}
 <div id="editstatus{{item.id}}" class="modal fade">
