--- a/ecom/templates/admin/admusers.html
+++ b/ecom/templates/admin/admusers.html
@@ -24,6 +24,16 @@
           <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-md-3">search</button>
         </form>
       </div>
+      {% if messages %}
+        {% for message in messages %}
+            <div class="text-center">
+                <h3 class="{% if message.tags == 'success' %} 
+                    text-success {% else %} text-danger
+                    {% endif %}"> {{ message }}
+                </h3>
+            </div>
+        {% endfor %}
+      {% endif %}
       <table class="table table-striped table-hover">
         <thead>
           <tr>
