--- a/ecom/templates/admin/brand_offers.html
+++ b/ecom/templates/admin/brand_offers.html
@@ -1,59 +1,63 @@
 {% include "admin/adminbase.html" %}
 {% load static %}
+
 <head>
     <link rel="stylesheet" href="{% static 'css/styletable.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <style>
         input[type="number"]::-webkit-outer-spin-button,
         input[type="number"]::-webkit-inner-spin-button {
-          -webkit-appearance: none;
+            -webkit-appearance: none;
         }
     </style>
 </head>
-{% block content1 %} 
+{% block content1 %}
 <div class="container tbd1">
     <div class="text-center" style="font-size: 20px;">Go to
         <a href="/view_product_offers/"><b> Product Offer Management</b></a>
     </div>
-    
+
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
                 <div class="col-sm-6 ">
-                    <h2>Brand  <b> Offer Management</b></h2>
+                    <h2>Brand <b> Offer Management</b></h2>
                 </div>
                 <div class="col-sm-6">
-                    <a href="#addOffer" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Offer</span></a>                </div>
+                    <a href="#addOffer" class="btn btn-success" data-toggle="modal"><i
+                            class="material-icons">&#xE147;</i> <span>Add New Offer</span></a>
+                </div>
             </div>
         </div>
         <form action="/view_brand_offers/">
-        <div class="row input-group ">
-            <input name="search"  type="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 " placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 ">search</button>
-          </div>
+            <div class="row input-group ">
+                <input name="search" type="search" class="form-control rounded offset-1 col-lg-8 col-sm-4 "
+                    placeholder="Brand name" aria-label="Search" aria-describedby="search-addon" />
+                <button type="submit" class="btn btn-outline-primary btn-primary col-lg-2 col-sm-3 ">search</button>
+            </div>
         </form>
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="text-center">
-                            <h3 class=" text-danger"> {{ message }} </h3>
-                        </div>
-                        
-                    {% endfor %}
-                {% endif %}
+        {% if messages %}
+        {% for message in messages %}
+        <div class="text-center">
+            <h4 class="{% if message.tags == 'success' %} 
+                        text-success {% else %} 
+                        text-danger {% endif %}">
+                {{ message }}
+            </h4>
+        </div>
+        {% endfor %}
+        {% endif %}
         <table class="table table-striped table-hover ms-3">
             <thead>
                 <tr>
                     <th>No.</th>
                     <th>Brand</th>
                     <th>Offer Percentage</th>
-                    <!-- <th>Image</th> -->
                     <th>Actions</th>
-                    <!-- <th>Add Variants</th> -->
                 </tr>
             </thead>
             <tbody>
@@ -62,31 +66,61 @@
                     <td>{{forloop.counter}}</td>
                     <td>{{offer.brand.brand_name}}</td>
                     <td>{{offer.offer_percentage}}</td>
-                    {% comment %} <td>{{prod.selling_price}}</td> {% endcomment %}
                     <td>
-                        <a href="#editOffer{{offer.id}}" class="edit pt-3" data-toggle="modal" title="edit "><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> &nbsp;
-                        {% if not offer.is_active  %}
-                        <a href="#listOffer{{offer.id}}" class=" pt-3 text-success" data-toggle="modal" title="activate offer">Activate</a>
+                        <a href="#editOffer{{offer.id}}" class="edit pt-3" data-toggle="modal" title="edit "><i
+                                class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> &nbsp;
+                        {% if not offer.is_active %}
+                        <a href="#listOffer{{offer.id}}" class=" pt-3 text-success" data-toggle="modal"
+                            title="activate offer">Activate</a>
                         {% else %}
-                        <a href="#listOffer{{offer.id}}" class=" pt-3 text-danger" data-toggle="modal" title="deactivate offer">Deactivate</a>
+                        <a href="#listOffer{{offer.id}}" class=" pt-3 text-danger" data-toggle="modal"
+                            title="deactivate offer">Deactivate</a>
                         {% endif %}
-                    </td>         
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <!-- <div class="clearfix">
-            <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+        <div class="clearfix">
+            {% if offers.has_other_pages %}
+            <div class="hint-text">
+                <b>{{ offers }}</b>
+            </div>
             <ul class="pagination">
-                <li class="page-item disabled"><a href="#">Previous</a></li>
-                <li class="page-item"><a href="#" class="page-link">1</a></li>
-                <li class="page-item"><a href="#" class="page-link">2</a></li>
-                <li class="page-item active"><a href="#" class="page-link">3</a></li>
-                <li class="page-item"><a href="#" class="page-link">4</a></li>
-                <li class="page-item"><a href="#" class="page-link">5</a></li>
-                <li class="page-item"><a href="#" class="page-link">Next</a></li>
+                {% if offers.has_previous %}
+                <li class="page-item">
+                    <a href="?page={{ offers.previous_page_number }}{% if search %}{{ search }}{% endif %}"
+                        class="page-link">&lt;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <a href="#">&lt;</a>
+                </li>
+                {% endif %}
+                {% for i in offers.paginator.page_range %}
+                {% if offers.number == i %}
+                <li class="active">
+                    <span>{{ i }} <span class="sr-only">(current)</span></span>
+                </li>
+                {% else %}
+                <li class="page-item">
+                    <a href="?page={{ i }}{% if search %}{{ search }}{% endif %}" class="page-link">{{ i }}</a>
+                </li>
+                {% endif %}
+                {% endfor %}
+                {% if offers.has_next %}
+                <li class="page-item">
+                    <a href="?page={{ offers.next_page_number }}{% if search %}{{ search }}{% endif %}"
+                        class="page-link">&gt;</a>
+                </li>
+                {% else %}
+                <li class="page-item disabled">
+                    <a href="#" class="page-link">&gt;</a>
+                </li>
+                {% endif %}
             </ul>
-        </div> -->
+            {% endif %}
+        </div>
     </div>
 </div>
 
@@ -95,14 +129,14 @@
     <div class="modal-dialog new1">
         <div class="modal-content">
             <form method="POST" action="/add_brand_offer/" id="addpform" enctype="multipart/form-data">
-            {% csrf_token %}
-                <div class="modal-header">						
+                {% csrf_token %}
+                <div class="modal-header">
                     <h4 class="modal-title">Add Offer</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
-                <div class="modal-body">					
+                <div class="modal-body">
                     <div class="form-group">
-                        <label for="category">Brand</label>       
+                        <label for="category">Brand</label>
                         <select class="form-control" id="brand" name="brand" required>
                             {% for brand in brands %}
                             <option value="{{brand.id}}"> {{brand.brand_name}}</option>
@@ -112,7 +146,7 @@
                     <div class="form-group">
                         <label>Offer Percentage</label>
                         <input name="perc" type="number" class="form-control" id="offerprice" required>
-                    </div>				
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
@@ -129,19 +163,21 @@
     <div class="modal-dialog new1">
         <div class="modal-content">
             <form method="POST" action="/update_brand_offer/{{offer.id}}" id="editpform">
-            {% csrf_token %}
-                <div class="modal-header">						
+                {% csrf_token %}
+                <div class="modal-header">
                     <h4 class="modal-title">Update Offer</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
-                <div class="modal-body">					
+                <div class="modal-body">
                     <div class="form-group">
                         <label>Brand</label>
-                        <input name="brand" value="{{offer.brand.brand_name}}" type="text" id="brand" class="form-control" disabled >
+                        <input name="brand" value="{{offer.brand.brand_name}}" type="text" id="brand"
+                            class="form-control" disabled>
                     </div>
                     <div class="form-group">
                         <label>Offer Percentage</label>
-                        <input name="perc" value="{{offer.offer_percentage}}" type="number" id="offerpric" class="form-control" required>
+                        <input name="perc" value="{{offer.offer_percentage}}" type="number" id="offerpric"
+                            class="form-control" required>
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -155,24 +191,26 @@
 {% endfor %}
 
 
-<!-- activate Offer -->
+<!-- activate/deactivate Offer Modal -->
 {% for offer in offers %}
 <div id="listOffer{{offer.id}}" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
             <form method="POST" action="/active_brand_offer/{{offer.id}}">
                 {% csrf_token %}
-                <div class="modal-header">						
+                <div class="modal-header">
                     <h4 class="modal-title">{% if offer.is_active %} Deactive {% else %} Active {% endif %} Offer</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
-                <div class="modal-body">					
-                    <p>Are you sure you want to {% if offer.is_active %} Deactive {% else %} Active {% endif %} offer for <b>{{ offer.brand.brand_name }}</b>?</p>
+                <div class="modal-body">
+                    <p>Are you sure you want to {% if offer.is_active %} Deactive {% else %} Active {% endif %} offer
+                        for <b>{{ offer.brand.brand_name }}</b>?</p>
                     <p class="text-warning"><small>This action can be reversed.</small></p>
                 </div>
                 <div class="modal-footer">
                     <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                    <input type="submit" class="btn btn-warning" value="{% if offer.is_active %} Deactive {% else %} Active {% endif %}">
+                    <input type="submit" class="btn btn-warning"
+                        value="{% if offer.is_active %} Deactive {% else %} Active {% endif %}">
                 </div>
             </form>
         </div>
